# nigel-react-native-demo

./: README.md
mobile/: App.js  package-lock.json  package.json
server/: Makefile  README.md  pyproject.toml
server/server/: main.py
