[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Arunscape <8227297+Arunscape@users.noreply.github.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.102.0"}
websockets = "^11.0.3"
sse-starlette = "^1.6.5"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
